--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-firebase/app": "^12.9.3",
     "@react-native-firebase/firestore": "^12.9.3",
     "@react-navigation/bottom-tabs": "^6.0.7",
