--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
+    "dateformat": "^5.0.2",
     "hex-to-rgba": "^2.0.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
