--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,10 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+            // storeFile file('b_n_co_key.keystore')
+            // storePassword '123456'
+            // keyAlias 'b_n_co_key_alias'
+            // keyPassword '123456'
         }
     }
     buildTypes {
